force-app/main/default/objects/SamplePdfDetails__mdt/SamplePdfDetails__mdt.object-meta.xml
<CustomObject>
    <label>SamplePdfDetails</label>
    <pluralLabel>SamplePdfDetails</pluralLabel>
</CustomObject>