force-app/main/default/objects/SamplePdfDetails__mdt/fields/FSSAI_Nr__c.field-meta.xml
<CustomField>
    <fullName>FSSAI_Nr__c</fullName>
    <label>FSSAI Nr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>