force-app/main/default/objects/SamplePdfDetails__mdt/fields/Hno__c.field-meta.xml
<CustomField>
    <fullName>Hno__c</fullName>
    <label>Hno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>