force-app/main/default/objects/SamplePdfDetails__mdt/fields/mobile1__c.field-meta.xml
<CustomField>
    <fullName>mobile1__c</fullName>
    <label>mobile1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>