force-app/main/default/objects/SamplePdfDetails__mdt/fields/Mobile2__c.field-meta.xml
<CustomField>
    <fullName>Mobile2__c</fullName>
    <label>Mobile2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>