force-app/main/default/objects/SamplePdfDetails__mdt/fields/NHC_HNO__c.field-meta.xml
<CustomField>
    <fullName>NHC_HNO__c</fullName>
    <label>NHC_HNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>