force-app/main/default/objects/SamplePdfDetails__mdt/fields/Pancode__c.field-meta.xml
<CustomField>
    <fullName>Pancode__c</fullName>
    <label>Pancode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>