force-app/main/default/objects/SamplePdfDetails__mdt/fields/SyntPark__c.field-meta.xml
<CustomField>
    <fullName>SyntPark__c</fullName>
    <label>SyntPark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>